# ai-chat-client

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  config.py  main.py  pyproject.toml  schema.sql  test_bank copy.csv  test_bank.csv  test_bank2.csv  test_bank_key.txt
ai_chat_client/: __init__.py  cli.py  config.py  prompts.py  results.py  test_bank.py
ai_chat_client/arms/: __init__.py  baseline.py  mcp.py
ai_chat_client/evaluation/: __init__.py  compare.py
ai_chat_client/llm/: anthropic_client.py  runners.py
semantic/: glossary.yml  main.yml  schemas.yml
