[project]
name = "ai-chat-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "mcp>=1.27.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ai-chat-client = "ai_chat_client.cli:main"
